# desolation-v0

./: .gitignore  Cargo.toml  Desolation Language.drawio
desolation-vm/: Cargo.toml
examples/: lex.rs  sq.t
src/: lib.rs
src/ast/: mod.rs  node.rs
src/lex/: cursor.rs  keyword.rs  lexer.rs  mod.rs  token.rs  types.rs
src/lexer/: lex.rs
src/parser/: mod.rs
