[package]
name = "desolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.test]
incremental = true

[dependencies]
enum_dispatch = "0.3.8"
serde = { version = "1.0.147", features = ["derive"] }
regex = "1.6.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
sensible-env-logger = "0.3.1"
lazy_static = "1.4.0"